--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,14 @@ img{
   max-width: 100%;
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 body{
   color: black;
   background-color: #D4D0CF;
+  font-family: "Roboto", sans-serif;
 }
 
 .container{
